This this the changelog file for the Pothos C++ library.

Release 0.7.0 (pending)
==========================

- Added calls setOut/InputAlias() for Topology API
- Update poco submodule to poco-1.9.0-release
- OutputPort::getBuffer() returns the exact specified buffer length
- Added OutputPort::getBuffer() with specified data type variant
- Version reporting API and build support for loadable modules

Release 0.6.1 (2018-04-30)
==========================

- Fixed BufferPool::get() unique check from buffer refactor work
- Remove arbitrary argument limit from Callable::opaqueCall()
- Additional error handling when RemoteServer fails to launch process
- Added support for PothosUtil to query information about loaded modules
- Fix for potential overrun in Block Description if the line is empty.

Release 0.6.0 (2017-12-25)
==========================

- Updated internal poco submodule to poco-1.8.0.1-release
- Removed deprecated API call OutputPort::popBuffer()
- Re-implement RingDeque container to use std::allocator
- Removed previously unused ObjectM class (mutable object)
- Added Pothos::Util::SpinLockRW for single write, multi-read
- API changes to Object, Proxy, and Callable interface types
  * Object supports implicit templated convert to target type
  * Proxy supports implicit templated convert to target type
  * Deprecated Callable interface's callVoid(), use call()
  * Deprecated Callable interface's callObject(), use call()
  * Deprecated Proxy interface's callVoid(), use call()
  * Deprecated Proxy interface's callProxy(), use call()
- Automatic slots for all void calls in Block::registerCallable:
  Previously calls with 1 or more arguments became automatic slots.
  The new rule checks for void return type and supports calls
  without arguments. In addition registerSlot() will not throw
  when registering slots that were created automatically.
- Renamed the project repo from pothos to PothosCore
- Updated toolkit/submodule URLs for repo rename